fixed repo so i can use github again.

--- a/artistSPA/css/spa.css
+++ b/artistSPA/css/spa.css
@@ -1,11 +1,16 @@
+
 body {
   background-color: blue
 }
 #main {
-  background-color: gray;
+  background-color: white;
 }
 #navi {
   background-color: white;
+}
+.jumbotron {
+  background-image: radial-gradient(ellipse,green,black);
+  color: white;
 }
 #entryForm {
   color: Black;
