--- a/artistSPA/css/spa.css
+++ b/artistSPA/css/spa.css
@@ -1,16 +1,18 @@
 
 body {
-  background-color: blue
+  background-color: black;
 }
 #main {
   background-color: white;
 }
-#navi {
-  background-color: white;
+.nav {
+  background-color: black;
+  color: black;
 }
 .jumbotron {
-  background-image: radial-gradient(ellipse,green,black);
+  background-image: url(/home/rpostma/Downloads/abstractBanner.jpg);
   color: white;
+  text-shadow: 1px 2px black;
 }
 #entryForm {
   color: Black;
