--- a/artistSPA/baseServercode/css/main.css
+++ b/artistSPA/baseServercode/css/main.css
@@ -1,10 +1,11 @@
 body {
-    background:  #92dce0 !important;
+    /*background:  #c10000 !important;*/
+    background-image: url(../pictures/brickwall.jpg);
 }
 
 
 #topNav {
-  
+
   background-color: #92dce0;
   border-color:  #92dce0 !important;
 }
@@ -47,7 +48,7 @@ header {
   text-align: top;
   background-color:  #7f909a;
   border-radius: 10px;
-  
+
 }
 
 #content-dates #genericDate {
@@ -55,11 +56,11 @@ header {
   border-radius: 10px;
   -moz-border-radius: 5px;
 border-radius: 4px;
- 
+
 -webkit-box-shadow: 0px 11px 25px rgba(50, 50, 50, 0.75);
 -moz-box-shadow:    0px 11px 25px rgba(50, 50, 50, 0.75);
 box-shadow:         0px 11px 25px rgba(50, 50, 50, 0.75);
-  
+
 }
 
 #content-dates #cemeteryDate {
@@ -67,7 +68,7 @@ box-shadow:         0px 11px 25px rgba(50, 50, 50, 0.75);
   border-radius: 10px;
     -moz-border-radius: 5px;
 border-radius: 4px;
-  
+
 -webkit-box-shadow: 0px 11px 25px rgba(50, 50, 50, 0.75);
 -moz-box-shadow:    0px 11px 25px rgba(50, 50, 50, 0.75);
 box-shadow:         0px 11px 25px rgba(50, 50, 50, 0.75);
@@ -98,7 +99,7 @@ box-shadow:         0px 11px 25px rgba(50, 50, 50, 0.75);
 }
 
 label.datecalc {
-  
+
   font-size: 25px;
 }
 
@@ -144,6 +145,3 @@ label.datecalc {
     display: inline;
   }
 }
-
-
-
